--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-switch": "^7.0.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
+    "@types/react-animations": "^1.0.0",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.1.0",
